crates/shwasi-parser/tests/snapshots/integration__elems.snap
---
source: crates/shwasi-parser/tests/tests.rs
expression: pretty_fmt(&module)
---
tables
---
0: table 110.. funcref

elements
---
0: element functions [] (funcref) active (table 0, offset i32.const 0)


